Implemented a Main_Menu class. Mode elements need to be finalized and reformatted.
A displayCursor(), getInput(), need to be created.

Would like to implement a bot playing the game for background animation.

--- a/Cosmos.vcxproj
+++ b/Cosmos.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Main_Menu.cpp" />
     <ClCompile Include="src\Ambience.cpp" />
     <ClCompile Include="src\Buffer.cpp" />
     <ClCompile Include="src\Cosmos.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="src\HUD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Main_Menu.h" />
     <ClInclude Include="src\Ambience.h" />
     <ClInclude Include="src\Buffer.h" />
     <ClInclude Include="src\Game.h" />
