--- a/Cosmos.vcxproj
+++ b/Cosmos.vcxproj
@@ -19,6 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Gamepad.cpp" />
+    <ClCompile Include="src\Keyboard.cpp" />
     <ClCompile Include="src\Main_Menu.cpp" />
     <ClCompile Include="src\Ambience.cpp" />
     <ClCompile Include="src\Buffer.cpp" />
@@ -27,6 +29,8 @@
     <ClCompile Include="src\HUD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Gamepad.h" />
+    <ClInclude Include="src\Keyboard.h" />
     <ClInclude Include="src\Main_Menu.h" />
     <ClInclude Include="src\Ambience.h" />
     <ClInclude Include="src\Buffer.h" />
@@ -108,6 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>xinput.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
