--- a/Cosmos.vcxproj
+++ b/Cosmos.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\Gamepad.cpp" />
     <ClCompile Include="src\Keyboard.cpp" />
     <ClCompile Include="src\Main_Menu.cpp" />
@@ -29,8 +30,10 @@
     <ClCompile Include="src\HUD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GameState.h" />
     <ClInclude Include="src\Gamepad.h" />
     <ClInclude Include="src\Keyboard.h" />
+    <ClInclude Include="src\MainMenu.h" />
     <ClInclude Include="src\Main_Menu.h" />
     <ClInclude Include="src\Ambience.h" />
     <ClInclude Include="src\Buffer.h" />
@@ -129,6 +132,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>xinput.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
